# learn-cpp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/ci/: devcontainer.json
.devcontainer/scripts/: post-create.sh  post-start.sh
.github/workflows/: build.yml  ci.yml  coverage.yml  lint.yml
apps/: CMakeLists.txt
apps/001_hello/: CMakeLists.txt  main.cpp
apps/001_moderndev_sources/: CMakeLists.txt
apps/001_moderndev_sources/001_adt/: CMakeLists.txt
apps/001_moderndev_sources/001_adt/include/ds/: IStack.hpp  StackArray.hpp  StackList.hpp
apps/001_moderndev_sources/001_adt/src/: main.cpp
apps/001_moderndev_sources/001_adt/tests/ds/: StackArrayTest.cpp  StackListTest.cpp
apps/001_moderndev_sources/001_btb/: CMakeLists.txt
apps/001_moderndev_sources/001_btb/001_fun/: CMakeLists.txt
apps/001_moderndev_sources/001_btb/001_fun/002/: CMakeLists.txt
apps/001_moderndev_sources/001_btb/001_fun/002/src/: 001-preprocess.cpp  001-preprocess.pp.cpp  001-preprocess.pp1.cpp
apps/002_moderndev_sources/: CMakeLists.txt
apps/002_moderndev_sources/001_adt/: CMakeLists.txt
apps/002_moderndev_sources/001_adt/include/ds/: StackArray.hpp
apps/002_moderndev_sources/001_adt/tests/ds/: StackArrayTest.cpp
cmake/: CppHelpers.cmake
docs/: architecture.md  modules.md  scripts.md
scripts/: build-type.sh  build.sh  ci-build.sh  ci-coverage.sh  coverage-report.sh  lint.sh  new-module.sh  setup-conan-presets.sh
templates/module/: CMakeLists.txt
templates/module/src/: main.cpp
templates/module/tests/: sample_test.cpp
